Fixes some mobile layout issues
Now just need to reset to what I had before (in ~500px breakpoint)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -185,15 +185,37 @@ header .container div {
   margin: 1rem 0;
 }
 
+header h2::before {
+  --size: 0.5rem;
+  display: inline-block;
+  margin-right: 0.5rem;
+  transition: 500ms;
+  
+  content: "";
+  width: 0; 
+  height: 0; 
+  border-top: var(--size) solid transparent;
+  border-bottom: var(--size) solid transparent;
+  
+  border-left: calc(1.732 * var(--size)) solid var(--fresh);
+}
+header h2:hover:before {
+  transform: rotate(90deg);
+}
+
 header form {
   display: flex;
+  flex-grow: 200;
   flex-wrap: wrap;
-  flex-direction: row;
-  width: min-content;
+  flex-direction: column;
+  width: 100%;
   justify-content: center;
 }
 
 header form label {
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
   margin: 0.5rem 0;
 }
 
@@ -232,6 +254,7 @@ main h2 {
   display: flex;
   align-items: center;
   margin: 2rem 0;
+  text-transform: uppercase;
 }
 
 main h2::after {
@@ -247,30 +270,42 @@ main h2::after {
 /* ******* */
 
 .stories li {
+  position: relative;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   align-items: center;
-  color: var(--vermillion);
+  color: white;
+  text-shadow: 0 0 2px var(--vermillion);
 }
 
 .stories li p {
-  width: 45%;
-  padding-left: 5%;
-}
-
-.stories li:nth-child(2n + 1) {
-  flex-direction: row-reverse; 
-}
-
-.stories li:nth-child(2n + 1 ) p {
   text-align: right;
-  padding-right: 5%;
+  padding: 50vh 1rem 0;
 }
 
 .stories li img {
+  z-index: -1;
+  position: absolute;
   display: inline-block;
-  width: 50%;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
   object-fit: cover;
+}
+
+/* .stories li:nth-child(2n + 1) img {
+  object-position: 50%;
+} */
+
+@media(min-width: 500px) {
+  .stories li:nth-child(2n + 1) p {
+    padding-right: 5%;
+  }
+  .stories li p {
+    width: 45%;
+    padding-left: 5%;
+  }
 }
 
 @media(min-width: 600px) {
